[gd_scene load_steps=19 format=2]

[ext_resource path="res://GameScene.gd" type="Script" id=1]
[ext_resource path="res://materials/flatBlack.tres" type="Material" id=2]
[ext_resource path="res://basicMeshLibrary.meshlib" type="MeshLibrary" id=3]
[ext_resource path="res://Screenshake.tscn" type="PackedScene" id=4]
[ext_resource path="res://Heart.gd" type="Script" id=5]
[ext_resource path="res://materials/spriteOverride.tres" type="Material" id=6]
[ext_resource path="res://sprites/heartPlanetCuore.png" type="Texture" id=7]
[ext_resource path="res://Lifebar.gd" type="Script" id=8]
[ext_resource path="res://sprites/purplecircle.png" type="Texture" id=9]
[ext_resource path="res://sprites/pinkcircle.png" type="Texture" id=10]
[ext_resource path="res://UI.tscn" type="PackedScene" id=11]
[ext_resource path="res://CurveDraw.gd" type="Script" id=12]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 300, 300 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 100, 1, 63 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 6, 6, 6 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
params_billboard_mode = 1
params_billboard_keep_scale = true

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeartSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.6, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3.25, 3.25, 1 ), Vector3( 3.5, 3.5, 1 ), Vector3( 3.25, 3.25, 1 ), Vector3( 3.5, 3.5, 1 ) ]
}

[sub_resource type="Curve3D" id=6]
_data = {
"points": PoolVector3Array( -25.3074, -2.28882e-005, -13.7354, 25.3074, 2.28882e-005, 13.7354, -77.1678, 0.000137329, 40.5983, -15.069, 6.86646e-005, 13.5337, 15.069, -6.86646e-005, -13.5337, 61.2818, 0.000106812, 26.6542, 16.4733, 7.62939e-006, 23.9127, -16.4733, -7.62939e-006, -23.9127, 63.9823, -0.00025177, -40.8474, 16.6281, -9.15527e-005, -18.797, -16.6281, 9.15527e-005, 18.797, -76.2726, -9.15527e-005, -39.4015, -29.6425, -6.86646e-005, -1.44597, 29.6425, 6.86646e-005, 1.44597, -71.6813, 0.000183105, 25.9771, -15.0707, 4.95911e-005, 7.70278, 15.0707, -4.95911e-005, -7.70278, 30.3088, 0.000183105, 21.9362, 16.8582, 7.62939e-005, 29.6158, -16.8582, -7.62939e-005, -29.6158, 42.1455, -0.000152588, -25.7429, 36.2529, -0.000167847, -9.54709, -36.2529, 0.000167847, 9.54709, -40.1257, -0.000106812, -35.7878, -23.2076, -7.62939e-006, 1.54176, 23.2076, 7.62939e-006, -1.54176, -43.5123, 6.10352e-005, 11.1628, 0, 0, 0, 0, 0, 0, -0.309932, -7.62939e-006, -0.309932 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="GameScene" type="Spatial"]
script = ExtResource( 1 )

[node name="GameSurface" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "1"
}

[node name="GameBoard" type="StaticBody" parent="GameSurface"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="GameSurface/GameBoard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 3 )
cell_size = Vector3( 16, 16, 16 )
data = {
"cells": PoolIntArray( 0, 4, 1, 1, 4, 1, 2, 4, 1, 3, 4, 1, 4, 4, 1, 5, 4, -1610612735, 6, 4, 1, 65529, 4, 1, 65530, 4, 1, 65531, 4, 536870913, 65532, 4, 1, 65533, 4, 1, 65534, 4, 1, 65535, 4, 1, 0, 5, 536870913, 1, 5, 1, 2, 5, 536870913, 3, 5, 1, 4, 5, 536870913, 5, 5, 1, 6, 5, 1, 65529, 5, 1, 65530, 5, 1, 65531, 5, -1610612735, 65532, 5, 536870913, 65533, 5, 1, 65534, 5, 1, 65535, 5, 1, 0, 65530, 1, 1, 65530, 1, 2, 65530, 1, 3, 65530, 1, 4, 65530, 1, 5, 65530, 1, 6, 65530, 1, 65529, 65530, 1, 65530, 65530, 536870913, 65531, 65530, 1, 65532, 65530, 1, 65533, 65530, -1610612735, 65534, 65530, 1, 65535, 65530, 1, 0, 65531, 1, 1, 65531, 536870913, 2, 65531, 1, 3, 65531, 536870913, 4, 65531, 1, 5, 65531, 1, 6, 65531, 1, 65529, 65531, 1, 65530, 65531, 1, 65531, 65531, 536870913, 65532, 65531, 1, 65533, 65531, 1, 65534, 65531, 1, 65535, 65531, 1 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0 )

[node name="MainCamera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 128 )
projection = 1
current = true
size = 150.0
near = 0.01
far = 600.0

[node name="Screenshake" parent="CameraPivot/MainCamera" instance=ExtResource( 4 )]

[node name="Heart" type="StaticBody" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 6, -3.53265 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Heart"]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="Heart"]
editor/display_folded = true
monitorable = false

[node name="AreaShape" type="CollisionShape" parent="Heart/Area"]
shape = SubResource( 3 )

[node name="HeartSprite" type="Sprite3D" parent="Heart"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0 )
material_override = ExtResource( 6 )
texture = ExtResource( 7 )

[node name="Lifebar" type="Sprite3D" parent="Heart"]
editor/display_folded = true
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
material_override = SubResource( 4 )
script = ExtResource( 8 )

[node name="Viewport" type="Viewport" parent="Heart/Lifebar"]
size = Vector2( 1024, 1024 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_v_flip = true

[node name="HeartLifebar" type="TextureProgress" parent="Heart/Lifebar/Viewport"]
margin_right = 1024.0
margin_bottom = 1024.0
max_value = 10000.0
value = 10000.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Heart"]
anims/HeartAnimation = SubResource( 5 )

[node name="LifebarTween" type="Tween" parent="Heart"]

[node name="RegenTimer" type="Timer" parent="Heart"]
process_mode = 0
wait_time = 0.01
autostart = true

[node name="UI" parent="." instance=ExtResource( 11 )]

[node name="Path" type="Path" parent="."]
curve = SubResource( 6 )

[node name="CurveDraw" type="ImmediateGeometry" parent="Path"]
script = ExtResource( 12 )

[node name="NextWaveTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 12.5
autostart = true
[connection signal="resource_changed" from="." to="UI" method="_on_GameScene_resource_changed"]
[connection signal="wave_changed" from="." to="UI" method="_on_GameScene_wave_changed"]
[connection signal="area_entered" from="Heart/Area" to="Heart" method="_on_Area_area_entered"]
[connection signal="timeout" from="Heart/RegenTimer" to="Heart" method="_on_RegenTimer_timeout"]
[connection signal="timeout" from="NextWaveTimer" to="." method="_on_NextWaveTimer_timeout"]
